# agent-vcr

./: .coverage  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  manifest.json  pyproject.toml
.github/workflows/: ci.yml
dev/bench/: data.js
docs/: index.html  script.js  styles.css
examples/: async_example.py  basic_usage.py  crewai_integration.py  langgraph_integration.py  time_travel_demo.py
src/agent_vcr/: __init__.py  async_player.py  async_recorder.py  models.py  player.py  recorder.py  server.py  tui.py
src/agent_vcr/integrations/: __init__.py  crewai.py  langgraph.py
tests/: conftest.py
tests/benchmarks/: test_performance.py
tests/e2e/: test_math_agent.py
tests/unit/: test_async.py  test_crewai_integration.py  test_edge_cases.py  test_langgraph_integration.py  test_models.py  test_player.py  test_recorder.py  test_server.py  test_tui.py
